force-app/main/default/objects/Quiz_Attempt__c/Quiz_Attempt__c.object-meta.xml
<CustomObject>
    <label>Quiz Attempt</label>
    <nameField>
        <displayFormat>QA-{00000000}</displayFormat>
        <label>Quiz Attempt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>