force-app/main/default/objects/Quiz_Attempt__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <description>The attempt number for this learner on this quiz</description>
    <inlineHelpText>Sequential attempt number (1, 2, 3, etc.)</inlineHelpText>
    <label>Attempt Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>