force-app/main/default/objects/Quiz_Attempt__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>Date and time the quiz was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>