force-app/main/default/objects/Quiz_Attempt__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>When this attempt was completed</description>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>