force-app/main/default/objects/Quiz_Attempt__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Learner who took the quiz</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quiz Attempts</relationshipLabel>
    <relationshipName>Quiz_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>