force-app/main/default/objects/Quiz_Attempt__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Course this quiz attempt is for</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Quiz Attempts</relationshipLabel>
    <relationshipName>Quiz_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>