force-app/main/default/objects/Quiz_Attempt__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enrollment record this quiz attempt is associated with (optional for standalone quizzes)</inlineHelpText>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Quiz Attempts</relationshipLabel>
    <relationshipName>Quiz_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>