force-app/main/default/objects/Quiz_Attempt__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether this quiz attempt passed based on the course passing score</inlineHelpText>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>