force-app/main/default/objects/Quiz_Attempt__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quiz being attempted</description>
    <label>Quiz</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Attempts</relationshipLabel>
    <relationshipName>Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>