force-app/main/default/objects/Quiz_Attempt__c/fields/Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Score_Percent__c</fullName>
    <description>Percentage score (0-100)</description>
    <inlineHelpText>Score as a percentage (0-100)</inlineHelpText>
    <label>Score Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>