force-app/main/default/objects/Quiz_Attempt__c/fields/Started_On__c.field-meta.xml
<CustomField>
    <fullName>Started_On__c</fullName>
    <description>When this attempt was started</description>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>